# rtspServer

./: CMakeLists.txt  Makefile  README.md  callbackclient.c  callbackclient.h  config.c  config.h  gstreamer_build.sh  httpserver.c  httpserver.h  log.h  manage.c  manage.h  mediamonitor.c  mediamonitor.h  pipelinebuilder.c  pipelinebuilder.h  pipelinemonitor.c  pipelinemonitor.h  rtsp-media-factory-custom.c  rtsp-media-factory-custom.h  rtsp-media-factory-rtsp-proxy.c  rtsp-media-factory-rtsp-proxy.h  rtsp.c  rtsp.h  rtsp_clients.c  rtsp_clients.h  rtsp_server  rtspproxypipeline.c  rtspproxypipeline.h  server.c  server.conf  server.h
