cmake_minimum_required(VERSION 3.5.1)
project (rtsp_server)
find_package(PkgConfig)
pkg_search_module(GST REQUIRED gstreamer-1.0 glib-2.0 gio-2.0)
#pkg_search_module(GST_RTSP REQUIRED gstrtspserver-1.0)
pkg_search_module(SOUP REQUIRED libsoup-2.4)
pkg_search_module(JSON REQUIRED json-glib-1.0)

file(GLOB SOURCES "*.c")
add_executable(rtsp_server ${SOURCES}) 
target_include_directories(rtsp_server PRIVATE ${GST_INCLUDE_DIRS})
#target_include_directories(rtsp_server PRIVATE ${GST_RTSP_INCLUDE_DIRS})
target_include_directories(rtsp_server PRIVATE ${SOUP_INCLUDE_DIRS})
target_include_directories(rtsp_server PRIVATE ${JSON_INCLUDE_DIRS})
target_link_libraries(rtsp_server ${GST_LIBRARIES})
target_link_libraries(rtsp_server gstrtspserver-1.0)
#target_link_libraries(rtsp_server ${GST_RTSP_LIBRARIES})
target_link_libraries(rtsp_server ${SOUP_LIBRARIES})
target_link_libraries(rtsp_server ${JSON_LIBRARIES})
target_compile_options(rtsp_server PRIVATE ${GST_CFLAGS})
