cmake_minimum_required(VERSION 3.5.1)
project (rtsp_server C)
set(ENV{PKG_CONFIG_PATH} "${CMAKE_INSTALL_PREFIX}/lib/pkgconfig/:$ENV{PKG_CONFIG_PATH}")
find_package(PkgConfig)
pkg_search_module(GST REQUIRED gstreamer-1.0 glib-2.0 gio-2.0 gstreamer-rtsp-1.0)
pkg_search_module(GST_RTSP_SERVER REQUIRED gstreamer-rtsp-server-1.0)
pkg_search_module(SOUP REQUIRED libsoup-2.4)
pkg_search_module(JSON REQUIRED json-glib-1.0)

#message("GST_RTSP_SERVER_LIBRARIES: " "${GST_LIBRARIES}")

file(GLOB SOURCES "*.c")
LINK_DIRECTORIES(${GST_LIBRARY_DIRS})
LINK_DIRECTORIES(${GST_RTSP_SERVER_LIBRARY_DIRS})
add_executable(rtsp_server ${SOURCES})
target_include_directories(rtsp_server PRIVATE ${GST_INCLUDE_DIRS})
target_include_directories(rtsp_server PRIVATE ${SOUP_INCLUDE_DIRS})
target_include_directories(rtsp_server PRIVATE ${JSON_INCLUDE_DIRS})
target_link_libraries(rtsp_server ${GST_LIBRARIES})
target_link_libraries(rtsp_server gstrtsp-1.0)
target_link_libraries(rtsp_server ${GST_RTSP_SERVER_LIBRARIES})
target_link_libraries(rtsp_server ${SOUP_LIBRARIES})
target_link_libraries(rtsp_server ${JSON_LIBRARIES})
target_compile_options(rtsp_server PRIVATE ${GST_RTSP_SERVER_LDFLAGS})
